# covenants-platform

./: index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml
agents/: FRONTEND_REFERENCE.md  plan.md
backend/: README.md  data.db  database_schema.md  pyproject.toml
backend/app/: __init__.py  config.py  crud.py  db.py  main.py  models.py  seed.py
backend/scripts/: geocode_missing.py  init_db.py
backend/tests/: conftest.py  test_aggregations.py
frontend/: DASHBOARD_OVERVIEW.md  SETUP.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/components/: ChemistryChart.tsx  Dashboard.tsx  FilterPanel.tsx  IndiaMap.tsx  LocationsTable.tsx  ProductsLeaderboard.tsx  StatsCard.tsx  StatsCards.tsx
frontend/src/lib/: api.ts
src/: App.tsx  index.css
src/components/: AccreditationFilter.tsx  ChemistryFilter.tsx  Dashboard.tsx  FilterSummary.tsx  IndiaMap.tsx  LocationFilter.tsx  ProductResults.tsx  SearchFilters.tsx  StatsCards.tsx
src/lib/: filterData.ts
